# autoreels

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PROJECT_GUIDE.md  PROJECT_STRUCTURE.md  R0_SPEC.md  README.md  pyproject.toml
config/: r0.yaml  render.yaml  subtitles.yaml  transcribe.yaml
manifests/: PXL_test6min.json  manifest.json
profiles/: tearoom_main.json
prompts/: r0_fewshot.json  r0_system.md
src/autoreels/: __init__.py  __main__.py
src/autoreels/cloud/: __init__.py  chunk_transcribe.py  compress.py  extract_audio.py  providers.py  select.py  snap.py  transcribe.py
src/autoreels/core/: __init__.py  calibration.py  config.py  models.py  state.py
src/autoreels/local/: __init__.py  archive.py  calibrate.py  crop.py  render.py  scenes.py  subtitles.py
src/autoreels/orchestr/: __init__.py  api.py  ingest.py  queue.py
tests/: conftest.py  test_archive.py  test_calibrate.py  test_calibration.py  test_chunk_transcribe.py  test_cli.py  test_compress.py  test_config.py  test_extract_audio.py  test_models.py  test_providers.py  test_render.py  test_select_validate.py  test_snap.py  test_state.py  test_subtitles.py  test_transcribe.py
tests/fixtures/: groq_whisper_word.json  qwen_r0_response.json
