[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-reels"
version = "0.0.0"
description = "Длинное горизонтальное видео → вертикальные рилсы 9:16 с субтитрами. Облако выбирает моменты (текст), локаль рендерит (ffmpeg)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "faster-whisper>=1.0",   # локальная транскрипция (word-level), узел CLOUD-тира
    "httpx>=0.27",           # провайдер-слой: Groq → OpenRouter
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
autoreels = "autoreels.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autoreels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
