[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-reels"
version = "0.0.0"
description = "Длинное горизонтальное видео → вертикальные рилсы 9:16 с субтитрами. Облако выбирает моменты (текст), локаль рендерит (ffmpeg)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",           # Groq Whisper + провайдер-слой R0 (Groq → OpenRouter)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Необязательный CPU-fallback транскрипции (offline). НЕ дефолт: prod на AMD-GPU без CUDA,
# CTranslate2 идёт только на CPU. Дефолт везде — Groq Whisper API. См. cloud/transcribe.py.
faster-whisper = [
    "faster-whisper>=1.0",
]

[project.scripts]
autoreels = "autoreels.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autoreels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# integration-тесты (реальные модели/сеть) пропускаются по умолчанию; гонять явно:
#   pytest -m integration   (только на системнике, где есть смысл реального прогона)
addopts = "-m 'not integration'"
markers = [
    "integration: реальный внешний прогон (faster-whisper/сеть); skip по умолчанию",
]
